home page finished

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 				<i class="fa-brands fa-instagram"></i>
 				<i class="fa-brands fa-youtube"></i>
 			</div>
+			<div class="presentation">
+				<h2>Explore <br />Dream <br />Destination</h2>
+				<p>
+					It encourages exploration of unfamiliar territories, embracing diverse
+					cultures and landscapes, while pursuing the desired destination that
+					captivates the heart and ignites a sens of wonder.
+				</p>
+				<button>BOOK NOW</button>
+			</div>
 		</main>
 		<script src="./index.js"></script>
 	</body>
