--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Travel Recommendation</title>
-		<link rel="stylesheet" href="./styles.css" />
+		<link rel="stylesheet" href="./index.css" />
 		<script
 			src="https://kit.fontawesome.com/0b2a8a50e1.js"
 			crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
 			<div class="link-container">
 				<ul>
 					<li><a href="./index.html" id="home">Home</a></li>
-					<li><a href="./about.html" id="contact">About Us</a></li>
+					<li><a href="./about.html" id="about">About Us</a></li>
 					<li><a href="./contact.html" id="contact">Contact Us</a></li>
 				</ul>
 			</div>
