--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
 				</p>
 				<button>BOOK NOW</button>
 			</div>
+			<div id="results">
+				<!--  -->
+				<div class="result-container">
+					<div class="result-img"></div>
+					<div class="result-text">
+						<h3>City, Country</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+							culpa deserunt consequatur quasi quam quis iste fuga possimus?
+						</p>
+						<button>Visit</button>
+					</div>
+				</div>
+				<!--  -->
+			</div>
 		</main>
 		<script src="./index.js"></script>
 	</body>
