--- a/iindex.html
+++ b/iindex.html
@@ -34,14 +34,14 @@
 			</div>
 		</nav>
 		<!-- MAIN SECTION -->
-		<main>
+		<main class="flex">
 			<!-- Social Icons (fix) -->
-			<section class="social-icons">
+			<section class="social-icons flex">
 				<span></span>
-				<i class="fa-brands fa-twitter"></i>
-				<i class="fa-brands fa-facebook-f"></i>
-				<i class="fa-brands fa-instagram"></i>
-				<i class="fa-brands fa-youtube"></i>
+				<a><i class="fa-brands fa-twitter"></i></a>
+				<a><i class="fa-brands fa-facebook"></i></a>
+				<a><i class="fa-brands fa-instagram"></i></a>
+				<a><i class="fa-brands fa-youtube"></i></a>
 			</section>
 			<!-- HOME COMPONENT -->
 			<section id="home-component" class="homepage">
