ready for single page function

--- a/iindex.html
+++ b/iindex.html
@@ -76,34 +76,7 @@
 				<div class="ourteam">
 					<h2>Our Team</h2>
 					<div class="team-card-container">
-						<!-- INJECT DATA WITH JAVASCRIPT -->
-						<!-- John Doe -->
-						<div class="team-card">
-							<div class="user">
-								<i class="fa-regular fa-user"></i>
-								<h4>John Doe</h4>
-							</div>
-							<p>John is responsible for...</p>
-							<span>CEO</span>
-						</div>
-						<!-- Celina Thomas -->
-						<div class="team-card">
-							<div class="user">
-								<i class="fa-regular fa-user"></i>
-								<h4>Celina Thomas</h4>
-							</div>
-							<p>Celina is responsible for...</p>
-							<span>Team Lead</span>
-						</div>
-						<!-- Myke Tysen -->
-						<div class="team-card">
-							<div class="user">
-								<i class="fa-regular fa-user"></i>
-								<h4>Mike Tysen</h4>
-							</div>
-							<p>Mike is responsible for...</p>
-							<span>Delivery Head</span>
-						</div>
+						<!-- Team Data is injected with JS (teamCard.js) -->
 					</div>
 				</div>
 			</section>
