navigation ok with single page

--- a/iindex.html
+++ b/iindex.html
@@ -18,9 +18,9 @@
 			</a>
 			<!-- Link to pages -->
 			<ul class="navbar-link flex">
-				<li><a href="./index.html" id="home">Home</a></li>
-				<li><a href="./about.html" id="about">About Us</a></li>
-				<li><a href="./contact.html" id="contact">Contact Us</a></li>
+				<li><a id="home-link">Home</a></li>
+				<li><a id="about-link">About Us</a></li>
+				<li><a id="contact-link">Contact Us</a></li>
 			</ul>
 			<!-- Search bar -->
 			<div class="navbar-search flex">
@@ -34,7 +34,7 @@
 			</div>
 		</nav>
 		<!-- MAIN SECTION -->
-		<main class="flex">
+		<main id="main" class="flex">
 			<!-- Social Icons (fix) -->
 			<section class="social-icons flex">
 				<span></span>
@@ -112,5 +112,6 @@
 		</main>
 		<script src="./iindex.js"></script>
 		<script src="./teamCard.js"></script>
+		<script src="./navigation.js"></script>
 	</body>
 </html>
