--- a/iindex.html
+++ b/iindex.html
@@ -44,8 +44,8 @@
 				<a><i class="fa-brands fa-youtube"></i></a>
 			</section>
 			<!-- HOME COMPONENT -->
-			<section id="home-component" class="homepage">
-				<div id="home-content">
+			<section id="home-component" class="homepage flex">
+				<div id="home-content" class="flex">
 					<h2>Explore <br />Dream <br />Destination</h2>
 					<p>
 						It encourages exploration of unfamiliar territories, embracing
@@ -58,7 +58,7 @@
 				<div id="home-results"></div>
 			</section>
 			<!-- ABOUT COMPONENT -->
-			<section id="about-component" class="aboutpage">
+			<section id="about-component" class="aboutpage flex">
 				<div class="about">
 					<h2>About us</h2>
 					<p>
@@ -81,7 +81,7 @@
 				</div>
 			</section>
 			<!-- CONTACT US COMPONENT -->
-			<section id="contact-component" class="contactpage">
+			<section id="contact-component" class="contactpage flex">
 				<div class="contact-text">
 					<h2>Contact us</h2>
 					<p>Get in touch</p>
