about component style

--- a/iindex.html
+++ b/iindex.html
@@ -59,7 +59,7 @@
 			</section>
 			<!-- ABOUT COMPONENT -->
 			<section id="about-component" class="aboutpage flex">
-				<div class="about">
+				<div id="about">
 					<h2>About us</h2>
 					<p>
 						Welcome to our company! We are a team of passionate individuals
@@ -73,9 +73,9 @@
 						free to explore our website to learn more about what we offer!
 					</p>
 				</div>
-				<div class="ourteam">
+				<div id="ourteam" class="flex">
 					<h2>Our Team</h2>
-					<div class="team-card-container">
+					<div class="team-card-container flex">
 						<!-- Team Data is injected with JS (teamCard.js) -->
 					</div>
 				</div>
