--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Travel Recommendation</title>
-		<link rel="stylesheet" href="./iindex.css" />
+		<link rel="stylesheet" href="./index.css" />
 		<script
 			src="https://kit.fontawesome.com/0b2a8a50e1.js"
 			crossorigin="anonymous"></script>
@@ -110,7 +110,7 @@
 				</div>
 			</section>
 		</main>
-		<script src="./iindex.js"></script>
+		<script src="./index.js"></script>
 		<script src="./teamCard.js"></script>
 		<script src="./navigation.js"></script>
 	</body>
